GearsetPOC/force-app/main/default/objects/SalesforceTicketRedemption__x/SalesforceTicketRedemption__x.object-meta.xml
<CustomObject>
    <description>Salesforce ticket redemption</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceTicketRedemption</externalName>
    <label>Loyalty ticket redemption</label>
    <pluralLabel>SalesforceTicketRedemption</pluralLabel>
</CustomObject>