GearsetPOC/force-app/main/default/objects/SalesforceTicketRedemption__x/fields/InboundRewardId__c.field-meta.xml
<CustomField>
    <fullName>InboundRewardId__c</fullName>
    <description>InboundRewardId</description>
    <externalDeveloperName>InboundRewardId</externalDeveloperName>
    <label>Inbound Reward id</label>
    <length>128</length>
    <referenceTo>SalesforceTicketReward__x</referenceTo>
    <relationshipLabel>Salesforce Ticket Redemption</relationshipLabel>
    <relationshipName>SalesforceTicketRedemption</relationshipName>
    <type>ExternalLookup</type>
</CustomField>