GearsetPOC/force-app/main/default/objects/SalesforceTicketRedemption__x/fields/InboundTicketTypeCode__c.field-meta.xml
<CustomField>
    <fullName>InboundTicketTypeCode__c</fullName>
    <description>InboundTicketTypeCode</description>
    <externalDeveloperName>InboundTicketTypeCode</externalDeveloperName>
    <label>Inbound ticket type code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>