GearsetPOC/force-app/main/default/objects/SalesforceTicketRedemption__x/fields/InboundTravelClassCode__c.field-meta.xml
<CustomField>
    <fullName>InboundTravelClassCode__c</fullName>
    <description>InboundTravelClassCode</description>
    <externalDeveloperName>InboundTravelClassCode</externalDeveloperName>
    <label>Inbound travel class code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>