GearsetPOC/force-app/main/default/objects/SalesforceTicketRedemption__x/fields/InboundTravelClassDescription__c.field-meta.xml
<CustomField>
    <fullName>InboundTravelClassDescription__c</fullName>
    <description>InboundTravelClassDescription</description>
    <externalDeveloperName>InboundTravelClassDescription</externalDeveloperName>
    <label>Inbound travel class description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>