GearsetPOC/force-app/main/default/objects/SalesforceTicketRedemption__x/fields/IsUpdateOf__c.field-meta.xml
<CustomField>
    <fullName>IsUpdateOf__c</fullName>
    <description>IsUpdateOf</description>
    <externalDeveloperName>IsUpdateOf</externalDeveloperName>
    <label>Is update of</label>
    <length>128</length>
    <type>Text</type>
</CustomField>