GearsetPOC/force-app/main/default/objects/SalesforceTicketRedemption__x/fields/OriginCode__c.field-meta.xml
<CustomField>
    <fullName>OriginCode__c</fullName>
    <description>OriginCode</description>
    <externalDeveloperName>OriginCode</externalDeveloperName>
    <label>Origin code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>