GearsetPOC/force-app/main/default/objects/SalesforceTicketRedemption__x/fields/OutboundTicketTypeCode__c.field-meta.xml
<CustomField>
    <fullName>OutboundTicketTypeCode__c</fullName>
    <description>OutboundTicketTypeCode</description>
    <externalDeveloperName>OutboundTicketTypeCode</externalDeveloperName>
    <label>Outbound ticket type code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>