GearsetPOC/force-app/main/default/objects/SalesforceTicketRedemption__x/fields/OutboundTravelClassDescription__c.field-meta.xml
<CustomField>
    <fullName>OutboundTravelClassDescription__c</fullName>
    <description>OutboundTravelClassDescription</description>
    <externalDeveloperName>OutboundTravelClassDescription</externalDeveloperName>
    <label>Outbound travel class description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>