GearsetPOC/force-app/main/default/objects/SalesforceTicketRedemption__x/fields/ReturnDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReturnDateTime__c</fullName>
    <externalDeveloperName>ReturnDateTime</externalDeveloperName>
    <label>Return DateTime</label>
    <type>DateTime</type>
</CustomField>