GearsetPOC/force-app/main/default/objects/SalesforceTicketRedemption__x/fields/TotalPointsCost__c.field-meta.xml
<CustomField>
    <fullName>TotalPointsCost__c</fullName>
    <description>TotalPointsCost</description>
    <externalDeveloperName>TotalPointsCost</externalDeveloperName>
    <label>Total points cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>